# saas-api-mocks

./: .env.example  .gitignore  ALPEN_COMPANY_STATE_REPORT.md  ARCHITECTURE.md  BOTH_REPOS_ISSUES_REPORT.md  FYRALIS_PLACEHOLDER_INGESTION_CLIENTS.md  HANDOVER_MODEL_LAYER_RUN.md  INGESTION_SWEEP_FINDINGS.md  README.md  dev.sh  pyproject.toml
.github/workflows/: ci.yml
corpus/: Makefile  README.md
corpus/artifacts/: THR-001-alpen-at-the-converg__B3__public-claims-boundary-for-strata-launch-materials.md  THR-002-strategic-round__B2__strata-settlement-and-proof-readiness-brief.md  THR-002-strategic-round__B5__diligence-infra-appendix-and-response-playbook.md  THR-003-alpen-testnet__B2__public-testnet-readiness-and-launch-criteria.md  THR-003-alpen-testnet__B2__testnet-genesis-rpc-and-monitoring-plan.md  THR-004-glock-is-here__B2__glock-public-release-scope-and-claims.md  THR-004-glock-is-here__B2__standalone-glock-verifier-demo-plan.md  THR-004-glock-is-here__B5__reproducible-glock-benchmark-workflow.md  THR-004-glock-is-here__B7__glock-is-here-launch-recap.md  THR-005-starknet-shared-gloc__B7__transcript-label-ambiguity-in-shared-glock-verifier-v0.md  THR-006-prague-testnet__B2__prague-chain-parameters-and-node-profile.md  THR-006-prague-testnet__B7__prague-testnet-readiness-and-public-testing-plan.md  THR-007-introducing-mosaic-g__B8__mosaic-announcement-follow-ups-and-integration-questions.md  THR-008-alpen__B12__alpen-dogfood-milestone-retro-and-follow-up-plan.md  (+15 more)
docs/: ARCHITECTURE.md
gharelu/: .gitignore  Makefile  README.md
spammers/: __init__.py  __main__.py
(+560 files in other folders)
