[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spammer"
version = "0.0.1"
description = "Wire-compatible self-hosted replicas of Slack/Discord/GitHub/Gmail for ingestion testing"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "structlog>=24.1",
    "pynacl>=1.5",
    "pyjwt[crypto]>=2.8",
    "jinja2>=3.1",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
spammer = "spammers.director.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["spammers/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spammers*"]
exclude = ["spammers.tests*"]

[tool.setuptools.package-data]
spammers = ["orggen/templates/**/*.j2", "db/migrations/*.sql"]
